# minify

./: .cruft.json  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  RELEASE.md  pyproject.toml  tasks.py
.github/workflows/: main.yml
pelican/plugins/minify/: __init__.py  minify.py  test_minify.py
